2004-07-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b1

        * Change: Remove bastard newlines from delete_user and delete_album that were causing
          jscript errors in Firefox.

2004-07-25  Chris Kelly <ckdake@users.sf.net> 1.4.4-RC3

	* 1.4.4-RC3 Release

2004-07-24  Jens A. Tkotz <jens@peino.de>  1.4.4-RC3-cvs-b10

	* Fix: Redirect in multi_create_user didnt worked after successfull adding.
	       Reason: doctype header was set before redirect header.

2004-07-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b9

        * Fix: Skins will be ignored when embedded.  This was causing a lot
          of display issues for users due to skin colors conflicting with
          embedding-system colors.

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b8

	* Fix?: Revert an earlier checkin (b100?) that prevented a PHP notice
	  when first loading sessions while embedded.  Some users report not
	  getting a session at all in postnuke.  Since postnuke was the original
	  problem, I'm confused, but this will work.  Supressing the notice using
	  @session_start()

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b7

	* Change: Remove the != SUNOS line from lib/lang.php
	  We're under the assumption that it was added based on a bogus
	  bug report some time ago because all docs (and user reports)
	  claim that the LANG= line is necessary.

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b6

        * Change: Better handling of the onsubmit/double-clicking issue
          utilizing an 'action' input which is changed depending on
          which button was clicked.

2004-07-21  Jens A. Tkotz <jens@peino.de>  1.4.4-RC3-cvs-b5

	* Fix: Cancel did not work in create user.

	* Fix: Default language was not used for new users.

	* Change: Added $ Id $

	* Change: Modified HowTo and Changelog a very little.

	* Change: Added little description to block-random.php
