@@ -1,3 +1,9 @@
+2004-07-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b2
+
+	* Fix: The addition of the 'view comments' for everyone was exposing
+	  hidden photos since view_comments.php had been written with only
+	  the owner/admin in mind.
+
 2004-07-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b1
 
         * Change: Remove bastard newlines from delete_user and delete_album that were causing
